16806
```scala

scala> def h()(i: Int) = 1
<console>:5: error: missing arguments for method h;
follow this method with `_' if you want to treat it as a partially applied function
  lazy val $result = `h`
                                          ^

scala> object o { def h()(i: Int) = 1 }
defined module o
```
